tests/negative/export_cyclic4_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .export_cyclic4_b
export foo
